--- a/style/patucoSchema.css
+++ b/style/patucoSchema.css
@@ -1,9 +1,5 @@
 
 
-/* 0 */
-
-
-
 /* root */
 
 
@@ -493,6 +489,18 @@ input:-webkit-autofill {
     width: 100%;
   }
 }
+
+/* fasdfasf */
+
+
+
+/* fasdf */
+
+
+
+/* dos */
+
+
 
 /* background */
 
