--- a/style/patucoSchema.css
+++ b/style/patucoSchema.css
@@ -8,7 +8,7 @@
 
     
 :root {
-  --primaryfontFamily1: jose;
+  --primaryfontFamily1: Spartan;
   --primaryfontFamily2: Spartan;
   --primaryfontFamily3: Spartan;
   --primaryfontFamily4: Spartan;
@@ -25,24 +25,15 @@
   --color-white: white;
   --color-red: #de5246;
   --background-colorBody: #e9eaea;
-  --button-background-color_-bc1: black;
-  --button-background-color_-bc2: black;
-  --button-background-color_-bc3: black;
-  --button-background-color_-bc4: black;
-  --button-background-color_-bc5: black;
-  --button-color_-c1: black;
-  --button-color_-c2: black;
-  --button-color_-c3: black;
-  --button-color_-c4: black;
-  --button-color_-c5: black;
-  --size-s_-1: 1vw;
-  --size-s_-2: 1vw;
-  --size-s_-3: 1vw;
-  --size-s_-4: 1vw;
-  --size-s_-5: 1vw;
   --background-color1: #e9eaea;
   --background-color2: #e9eaea;
   --container: 0 9% 0 9%;
+  --button-background-color_-0: black;
+  --button-background-color_-1: black;
+  --button-background-color_-2: black;
+  --button-background-color_-3: black;
+  --button-background-color_-4: black;
+  --button-background-color_-5: black;
 
 }
     
@@ -211,7 +202,7 @@ textarea {
 /* grid */
 
       
-[class*="col_"] {
+[class*="_col_"] {
   float: left;
   /* padding: 15px; */
 }
@@ -222,7 +213,7 @@ textarea {
 }
       
 /* For mobile phones: */
-[class*="col_"] {
+[class*="_col_"] {
   width: 100%;
 }
       
@@ -1849,8 +1840,28 @@ transition: all 300ms linear;
 
 /* buttons */
 
-._btn_bg_- {
+._btn_bg_-0 {
     padding: var(--button-background-color_-0);
+}
+
+ ._btn_bg_-1 {
+    padding: var(--button-background-color_-1);
+}
+
+ ._btn_bg_-2 {
+    padding: var(--button-background-color_-2);
+}
+
+ ._btn_bg_-3 {
+    padding: var(--button-background-color_-3);
+}
+
+ ._btn_bg_-4 {
+    padding: var(--button-background-color_-4);
+}
+
+ ._btn_bg_-5 {
+    padding: var(--button-background-color_-5);
 }
 
  ._btn_1 {
@@ -1907,51 +1918,51 @@ white-space: nowrap;
 }
 
 @media only screen and (min-width: 600px) {
-.col_s_1 {
+._col_s_1 {
 width: 8.33%;
 }
 
-.col_s_2 {
+._col_s_2 {
 width: 16.66%;
 }
 
-.col_s_3 {
+._col_s_3 {
 width: 25%;
 }
 
-.col_s_4 {
+._col_s_4 {
 width: 33.33%;
 }
 
-.col_s_5 {
+._col_s_5 {
 width: 41.66%;
 }
 
-.col_s_6 {
+._col_s_6 {
 width: 50%;
 }
 
-.col_s_7 {
+._col_s_7 {
 width: 58.33%;
 }
 
-.col_s_8 {
+._col_s_8 {
 width: 66.66%;
 }
 
-.col_s_9 {
+._col_s_9 {
 width: 75%;
 }
 
-.col_s_10 {
+._col_s_10 {
 width: 83.33%;
 }
 
-.col_s_11 {
+._col_s_11 {
 width: 91.66%;
 }
 
-.col_s_12 {
+._col_s_12 {
 width: 16.66%;
 }
 
@@ -2018,51 +2029,51 @@ left: calc(50% - (100% / 2));
 
 }
 @media only screen and (min-width: 768px) {
-.col_1 {
+._col_1 {
 width: 8.33%;
 }
 
-.col_2 {
+._col_2 {
 width: 16.66%;
 }
 
-.col_3 {
+._col_3 {
 width: 25%;
 }
 
-.col_4 {
+._col_4 {
 width: 33.33%;
 }
 
-.col_5 {
+._col_5 {
 width: 41.66%;
 }
 
-.col_6 {
+._col_6 {
 width: 50%;
 }
 
-.col_7 {
+._col_7 {
 width: 58.33%;
 }
 
-.col_8 {
+._col_8 {
 width: 66.66%;
 }
 
-.col_9 {
+._col_9 {
 width: 75%;
 }
 
-.col_10 {
+._col_10 {
 width: 83.33%;
 }
 
-.col_11 {
+._col_11 {
 width: 91.66%;
 }
 
-.col_12 {
+._col_12 {
 width: 16.66%;
 }
 
@@ -2103,51 +2114,51 @@ margin-right: 5rem;
 
 }
 @media only screen and (min-width: 1200px) {
-.col_l_1 {
+._col_l_1 {
 width: 8.33%;
 }
 
-.col_l_2 {
+._col_l_2 {
 width: 8.33%;
 }
 
-.col_l_3 {
+._col_l_3 {
 width: 25%;
 }
 
-.col_l_4 {
+._col_l_4 {
 width: 33.33%;
 }
 
-.col_l_5 {
+._col_l_5 {
 width: 41.66%;
 }
 
-.col_l_6 {
+._col_l_6 {
 width: 50%;
 }
 
-.col_l_7 {
+._col_l_7 {
 width: 58.33%;
 }
 
-.col_l_8 {
+._col_l_8 {
 width: 66.66%;
 }
 
-.col_l_9 {
+._col_l_9 {
 width: 75%;
 }
 
-.col_l_10 {
+._col_l_10 {
 width: 83.33%;
 }
 
-.col_l_11 {
+._col_l_11 {
 width: 91.66%;
 }
 
-.col_l_12 {
+._col_l_12 {
 width: 16.66%;
 }
 
