--- a/style/patucoSchema.css
+++ b/style/patucoSchema.css
@@ -8,7 +8,7 @@
 
     
 :root {
-  --primaryfontFamily1: Spartan;
+  --primaryfontFamily1: jose;
   --primaryfontFamily2: Spartan;
   --primaryfontFamily3: Spartan;
   --primaryfontFamily4: Spartan;
@@ -25,15 +25,26 @@
   --color-white: white;
   --color-red: #de5246;
   --background-colorBody: #e9eaea;
-  --background-color1: #e9eaea;
-  --background-color2: #e9eaea;
-  --container: 0 9% 0 9%;
-  --button-background-color_-0: black;
-  --button-background-color_-1: black;
+  --button-background-color_-0: #0d6efd;
+  --button-background-color_-1: #2f80ed;
   --button-background-color_-2: black;
   --button-background-color_-3: black;
   --button-background-color_-4: black;
   --button-background-color_-5: black;
+  --button-color_-c1: black;
+  --button-color_-c2: black;
+  --button-color_-c3: black;
+  --button-color_-c4: black;
+  --button-color_-c5: black;
+  --size-s_-1: 1vw;
+  --size-s_-2: 1vw;
+  --size-s_-3: 1vw;
+  --size-s_-4: 1vw;
+  --size-s_-5: 1vw;
+  --background-color1: #e9eaea;
+  --background-color2: #e9eaea;
+  --card-outline-width: 0px;
+  --container: 0 9% 0 9%;
 
 }
     
@@ -1841,33 +1852,73 @@ transition: all 300ms linear;
 /* buttons */
 
 ._btn_bg_-0 {
-    padding: var(--button-background-color_-0);
+    background-color: var(--button-background-color_-0);
 }
 
  ._btn_bg_-1 {
-    padding: var(--button-background-color_-1);
+    background-color: var(--button-background-color_-1);
 }
 
  ._btn_bg_-2 {
-    padding: var(--button-background-color_-2);
+    background-color: var(--button-background-color_-2);
 }
 
  ._btn_bg_-3 {
-    padding: var(--button-background-color_-3);
+    background-color: var(--button-background-color_-3);
 }
 
  ._btn_bg_-4 {
-    padding: var(--button-background-color_-4);
+    background-color: var(--button-background-color_-4);
 }
 
  ._btn_bg_-5 {
-    padding: var(--button-background-color_-5);
+    background-color: var(--button-background-color_-5);
 }
 
- ._btn_1 {
+ ._btn_bgg_-0 {
+    background: var(--button-background-gradient_-0);
+}
+
+ ._btn_bgg_-1 {
+    background: var(--button-background-gradient_-1);
+}
+
+ ._btn_2 {
+    cursor: pointer;
+border: 0;
+border-radius: 12px;
+color: #fff;
+background: linear-gradient(to bottom right, #0d6efd, #40a1ff);
+display: inline-block;
+font-family: -apple-system,system-ui,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
+font-size: 16px;
+font-weight: 500;
+line-height: 2.5;
+outline: transparent;
+padding: 0 1rem;
+text-align: center;
+text-decoration: none;
+transition: box-shadow .2s ease-in-out;
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
+white-space: nowrap;
+}
+
+ ._btn_2:active {
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem #003bca, .125rem .125rem 1rem #40a1ff;
+  transform: translateY(2px);
+  transition-duration: 0.35s;
+}
+
+._btn_2:not([disabled]):hover {
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem #003bca, .125rem .125rem 1rem #40a1ff;
+}
+
+._btn_1 {
     appearance: none;
+font-family: -apple-system,system-ui,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
 backface-visibility: hidden;
-background-color: #2f80ed;
 border-radius: 10px;
 border-style: none;
 box-shadow: none;
@@ -1915,6 +1966,40 @@ white-space: nowrap;
 
 ._btn_1:active:after {
   opacity: 1;
+}
+
+
+
+/* cards */
+
+.card1_cont {
+    box-shadow: 0 0.2em 1em rgba(0, 0, 0, 0.1), 0 1em 2em rgba(0, 0, 0, 0.1);
+background: rgb(255, 255, 255);
+color: rgb(10, 5, 7);
+border-radius: 1em;
+overflow: hidden;
+display: grid;
+grid-template-areas: 'text img';
+grid-template-columns: 1fr 1fr;;
+grid-template-rows: auto;
+align-items: stretch;
+outline: var(--card-outline-width) solid lime;
+}
+
+ .card1_cont > div {
+  grid-area: text;
+  width: 80%;
+  place-self: center;
+  text-align: left;
+  display: grid;
+  gap: 1em;
+  place-items: start;
+}
+
+.card1_cont > figure > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @media only screen and (min-width: 600px) {
