--- a/style/patucoSchema.css
+++ b/style/patucoSchema.css
@@ -8,7 +8,7 @@
 
     
 :root {
-  --primaryfontFamily1: jose;
+  --primaryfontFamily1: Spartan;
   --primaryfontFamily2: Spartan;
   --primaryfontFamily3: Spartan;
   --primaryfontFamily4: Spartan;
@@ -25,26 +25,30 @@
   --color-white: white;
   --color-red: #de5246;
   --background-colorBody: #e9eaea;
-  --button-background-color_-0: #0d6efd;
-  --button-background-color_-1: #2f80ed;
-  --button-background-color_-2: black;
-  --button-background-color_-3: black;
-  --button-background-color_-4: black;
-  --button-background-color_-5: black;
-  --button-color_-c1: black;
-  --button-color_-c2: black;
-  --button-color_-c3: black;
-  --button-color_-c4: black;
-  --button-color_-c5: black;
-  --size-s_-1: 1vw;
-  --size-s_-2: 1vw;
-  --size-s_-3: 1vw;
-  --size-s_-4: 1vw;
-  --size-s_-5: 1vw;
   --background-color1: #e9eaea;
   --background-color2: #e9eaea;
-  --card-outline-width: 0px;
   --container: 0 9% 0 9%;
+  --spacer_-0: 0;
+  --spacer_-1: 1rem;
+  --spacer_-2: 2rem;
+  --spacer_-3: 3rem;
+  --spacer_-4: 4rem;
+  --spacer_-5: 5rem;
+  --spacer-K-s_-0: 0;
+  --spacer-K-s_-1: 0.2rem;
+  --spacer-K-s_-2: 0.3rem;
+  --spacer-K-s_-3: 0.4rem;
+  --spacer-K-s_-4: 0.5rem;
+  --spacer-K-s_-5: 0.8rem;
+  --button-background-color_-0: #0d6efd;
+  --button-background-color_-1: white;
+  --button-background-color_-2: green;
+  --button-background-color_-3: blue;
+  --button-background-color_-4: black;
+  --button-background-color_-5: black;
+  --button-background-gradient_-0: linear-gradient(to bottom right, #EF4765, #FF9A5A);
+  --button-background-gradient_-1: linear-gradient(to bottom right, #4766ef, #5ad0ff);
+  --button-box-shadow_-0: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
 
 }
     
@@ -953,6 +957,54 @@ list-style-position: outside;
     float: right;
 }
 
+ ._m_-spacer0 {
+    background-color: var(--spacer_-0);
+}
+
+ ._m_-spacer1 {
+    background-color: var(--spacer_-1);
+}
+
+ ._m_-spacer2 {
+    background-color: var(--spacer_-2);
+}
+
+ ._m_-spacer3 {
+    background-color: var(--spacer_-3);
+}
+
+ ._m_-spacer4 {
+    background-color: var(--spacer_-4);
+}
+
+ ._m_-spacer5 {
+    background-color: var(--spacer_-5);
+}
+
+ ._m_-s0 {
+    background-color: var(--spacer-K-s_-0);
+}
+
+ ._m_-s1 {
+    background-color: var(--spacer-K-s_-1);
+}
+
+ ._m_-s2 {
+    background-color: var(--spacer-K-s_-2);
+}
+
+ ._m_-s3 {
+    background-color: var(--spacer-K-s_-3);
+}
+
+ ._m_-s4 {
+    background-color: var(--spacer-K-s_-4);
+}
+
+ ._m_-s5 {
+    background-color: var(--spacer-K-s_-5);
+}
+
  ._m_0 {
     margin: 0;
 }
@@ -1851,35 +1903,35 @@ transition: all 300ms linear;
 
 /* buttons */
 
-._btn_bg_-0 {
+._btn_bg_-button-background-color0 {
     background-color: var(--button-background-color_-0);
 }
 
- ._btn_bg_-1 {
+ ._btn_bg_-button-background-color1 {
     background-color: var(--button-background-color_-1);
 }
 
- ._btn_bg_-2 {
+ ._btn_bg_-button-background-color2 {
     background-color: var(--button-background-color_-2);
 }
 
- ._btn_bg_-3 {
+ ._btn_bg_-button-background-color3 {
     background-color: var(--button-background-color_-3);
 }
 
- ._btn_bg_-4 {
+ ._btn_bg_-button-background-color4 {
     background-color: var(--button-background-color_-4);
 }
 
- ._btn_bg_-5 {
+ ._btn_bg_-button-background-color5 {
     background-color: var(--button-background-color_-5);
 }
 
- ._btn_bgg_-0 {
+ ._btn_bgg_-button-background-gradient0 {
     background: var(--button-background-gradient_-0);
 }
 
- ._btn_bgg_-1 {
+ ._btn_bgg_-button-background-gradient1 {
     background: var(--button-background-gradient_-1);
 }
 
