--- a/patuco/style/patucoSchema.css
+++ b/patuco/style/patucoSchema.css
@@ -34,11 +34,12 @@
   --spacer_-3: 3rem;
   --spacer_-4: 4rem;
   --spacer_-5: 5rem;
-  --spacer_-1s: 0.2rem;
-  --spacer_-2s: 0.3rem;
-  --spacer_-3s: 0.4rem;
-  --spacer_-4s: 0.5rem;
-  --spacer_-5s: 0.8rem;
+  --spacer-K-s_-0: 0;
+  --spacer-K-s_-1: 0.2rem;
+  --spacer-K-s_-2: 0.3rem;
+  --spacer-K-s_-3: 0.4rem;
+  --spacer-K-s_-4: 0.5rem;
+  --spacer-K-s_-5: 0.8rem;
   --button-background-color_-0: #0d6efd;
   --button-background-color_-1: white;
   --button-background-color_-2: green;
@@ -956,403 +957,6 @@ list-style-position: outside;
     float: right;
 }
 
- ._m_-0 {
-    background-color: var(--spacer_-0);
-}
-
- ._m_-1 {
-    background-color: var(--spacer_-1);
-}
-
- ._m_-2 {
-    background-color: var(--spacer_-2);
-}
-
- ._m_-3 {
-    background-color: var(--spacer_-3);
-}
-
- ._m_-4 {
-    background-color: var(--spacer_-4);
-}
-
- ._m_-5 {
-    background-color: var(--spacer_-5);
-}
-
- ._m_-6 {
-    background-color: var(--spacer_-1s);
-}
-
- ._m_-7 {
-    background-color: var(--spacer_-2s);
-}
-
- ._m_-8 {
-    background-color: var(--spacer_-3s);
-}
-
- ._m_-9 {
-    background-color: var(--spacer_-4s);
-}
-
- ._m_-10 {
-    background-color: var(--spacer_-5s);
-}
-
- ._m_-0 {
-    background-color: var(--spacer_-0s);
-}
-
- ._m_-1 {
-    background-color: var(--spacer_-1s);
-}
-
- ._m_-2 {
-    background-color: var(--spacer_-2s);
-}
-
- ._m_-3 {
-    background-color: var(--spacer_-3s);
-}
-
- ._m_-4 {
-    background-color: var(--spacer_-4s);
-}
-
- ._m_-5 {
-    background-color: var(--spacer_-5s);
-}
-
- ._m_-6 {
-    background-color: var(--spacer_-1ss);
-}
-
- ._m_-7 {
-    background-color: var(--spacer_-2ss);
-}
-
- ._m_-8 {
-    background-color: var(--spacer_-3ss);
-}
-
- ._m_-9 {
-    background-color: var(--spacer_-4ss);
-}
-
- ._m_-10 {
-    background-color: var(--spacer_-5ss);
-}
-
- ._m_0 {
-    margin: 0;
-}
-
- ._m_1 {
-    margin: 1rem;
-}
-
- ._m_2 {
-    margin: 2rem;
-}
-
- ._m_3 {
-    margin: 3rem;
-}
-
- ._m_4 {
-    margin: 4rem;
-}
-
- ._m_5 {
-    margin: 5rem;
-}
-
- ._m_1s {
-    margin: 0.2rem;
-}
-
- ._m_2s {
-    margin: 0.3rem;
-}
-
- ._m_3s {
-    margin: 0.4rem;
-}
-
- ._m_4s {
-    margin: 0.5rem;
-}
-
- ._m_5s {
-    margin: 0.8rem;
-}
-
- ._mt_0 {
-    margin-top: 0rem;
-}
-
- ._mt_1 {
-    margin-top: 1rem;
-}
-
- ._mt_2 {
-    margin-top: 2rem;
-}
-
- ._mt_3 {
-    margin-top: 3rem;
-}
-
- ._mt_4 {
-    margin-top: 4rem;
-}
-
- ._mt_5 {
-    margin-top: 5rem;
-}
-
- ._mt_1s {
-    margin-top: 0.2rem;
-}
-
- ._mt_2s {
-    margin-top: 0.3rem;
-}
-
- ._mt_3s {
-    margin-top: 0.4rem;
-}
-
- ._mt_4s {
-    margin-top: 0.5rem;
-}
-
- ._mt_5s {
-    margin-top: 0.8rem;
-}
-
- ._mb_0 {
-    margin-bottom: 0rem;
-}
-
- ._mb_1 {
-    margin-bottom: 1rem;
-}
-
- ._mb_2 {
-    margin-bottom: 2rem;
-}
-
- ._mb_3 {
-    margin-bottom: 3rem;
-}
-
- ._mb_4 {
-    margin-bottom: 4rem;
-}
-
- ._mb_5 {
-    margin-bottom: 5rem;
-}
-
- ._mb_1s {
-    margin-bottom: 0.2rem;
-}
-
- ._mb_2s {
-    margin-bottom: 0.3rem;
-}
-
- ._mb_3s {
-    margin-bottom: 0.4rem;
-}
-
- ._mb_4s {
-    margin-bottom: 0.5rem;
-}
-
- ._mb_5s {
-    margin-bottom: 0.8rem;
-}
-
- ._ml_0 {
-    margin-left: 0rem;
-}
-
- ._ml_1 {
-    margin-left: 1rem;
-}
-
- ._ml_2 {
-    margin-left: 2rem;
-}
-
- ._ml_3 {
-    margin-left: 3rem;
-}
-
- ._ml_4 {
-    margin-left: 4rem;
-}
-
- ._ml_5 {
-    margin-left: 5rem;
-}
-
- ._ml_1s {
-    margin-left: 0.2rem;
-}
-
- ._ml_2s {
-    margin-left: 0.3rem;
-}
-
- ._ml_3s {
-    margin-left: 0.4rem;
-}
-
- ._ml_4s {
-    margin-left: 0.5rem;
-}
-
- ._ml_5s {
-    margin-left: 0.8rem;
-}
-
- ._mr_0 {
-    margin-right: 0rem;
-}
-
- ._mr_1 {
-    margin-right: 1rem;
-}
-
- ._mr_2 {
-    margin-right: 2rem;
-}
-
- ._mr_3 {
-    margin-right: 3rem;
-}
-
- ._mr_4 {
-    margin-right: 4rem;
-}
-
- ._mr_5 {
-    margin-right: 5rem;
-}
-
- ._mr_1s {
-    margin-right: 0.2rem;
-}
-
- ._mr_2s {
-    margin-right: 0.3rem;
-}
-
- ._mr_3s {
-    margin-right: 0.4rem;
-}
-
- ._mr_4s {
-    margin-right: 0.5rem;
-}
-
- ._mr_5s {
-    margin-right: 0.8rem;
-}
-
- ._my_0 {
-    margin-top: 0rem;
-margin-bottom: 0rem;
-}
-
- ._my_1 {
-    margin-top: 1rem;
-margin-bottom: 1rem;
-}
-
- ._my_2 {
-    margin-top: 2rem;
-margin-bottom: 2rem;
-}
-
- ._my_3 {
-    margin-top: 3rem;
-margin-bottom: 3rem;
-}
-
- ._my_4 {
-    margin-top: 4rem;
-margin-bottom: 4rem;
-}
-
- ._my_5 {
-    margin-top: 5rem;
-margin-bottom: 5rem;
-}
-
- ._mx_a {
-    margin: 0 auto;
-}
-
- ._mx_1s {
-    margin-left: 0.2rem;
-margin-right: 0.2rem;
-}
-
- ._mx_2s {
-    margin-left: 0.3rem;
-margin-right: 0.3rem;
-}
-
- ._mx_3s {
-    margin-left: 0.4rem;
-margin-right: 0.4rem;
-}
-
- ._mx_4s {
-    margin-left: 0.5rem;
-margin-right: 0.5rem;
-}
-
- ._mx_5s {
-    margin-left: 0.7rem;
-margin-right: 0.7rem;
-}
-
- ._mx_0 {
-    margin-left: 0rem;
-margin-right: 0rem;
-}
-
- ._mx_1 {
-    margin-left: 1rem;
-margin-right: 1rem;
-}
-
- ._mx_2 {
-    margin-left: 2rem;
-margin-right: 2rem;
-}
-
- ._mx_3 {
-    margin-left: 3rem;
-margin-right: 3rem;
-}
-
- ._mx_4 {
-    margin-left: 4rem;
-margin-right: 4rem;
-}
-
- ._mx_5 {
-    margin-left: 5rem;
-margin-right: 5rem;
-}
-
  
 
 /* padding */
@@ -1942,39 +1546,7 @@ transition: all 300ms linear;
 
 /* buttons */
 
-._btn_bg_-0 {
-    background-color: var(--button-background-color_-0);
-}
-
- ._btn_bg_-1 {
-    background-color: var(--button-background-color_-1);
-}
-
- ._btn_bg_-2 {
-    background-color: var(--button-background-color_-2);
-}
-
- ._btn_bg_-3 {
-    background-color: var(--button-background-color_-3);
-}
-
- ._btn_bg_-4 {
-    background-color: var(--button-background-color_-4);
-}
-
- ._btn_bg_-5 {
-    background-color: var(--button-background-color_-5);
-}
-
- ._btn_bgg_-0 {
-    background: var(--button-background-gradient_-0);
-}
-
- ._btn_bgg_-1 {
-    background: var(--button-background-gradient_-1);
-}
-
- ._btn_2 {
+._btn_2 {
     cursor: pointer;
 border: 0;
 border-radius: 12px;
