--- a/style/patucoSchema.css
+++ b/style/patucoSchema.css
@@ -957,306 +957,308 @@ list-style-position: outside;
     float: right;
 }
 
- ._m_-spacer0 {
-    background-color: var(--spacer_-0);
-}
-
- ._m_-spacer1 {
-    background-color: var(--spacer_-1);
-}
-
- ._m_-spacer2 {
-    background-color: var(--spacer_-2);
-}
-
- ._m_-spacer3 {
-    background-color: var(--spacer_-3);
-}
-
- ._m_-spacer4 {
-    background-color: var(--spacer_-4);
-}
-
- ._m_-spacer5 {
-    background-color: var(--spacer_-5);
-}
-
- ._m_-s0 {
-    background-color: var(--spacer-K-s_-0);
-}
-
- ._m_-s1 {
-    background-color: var(--spacer-K-s_-1);
-}
-
- ._m_-s2 {
-    background-color: var(--spacer-K-s_-2);
-}
-
- ._m_-s3 {
-    background-color: var(--spacer-K-s_-3);
-}
-
- ._m_-s4 {
-    background-color: var(--spacer-K-s_-4);
-}
-
- ._m_-s5 {
-    background-color: var(--spacer-K-s_-5);
-}
-
- ._m_0 {
-    margin: 0;
-}
-
- ._m_1 {
-    margin: 1rem;
-}
-
- ._m_2 {
-    margin: 2rem;
-}
-
- ._m_3 {
-    margin: 3rem;
-}
-
- ._m_4 {
-    margin: 4rem;
-}
-
- ._m_5 {
-    margin: 5rem;
-}
-
- ._m_1s {
-    margin: 0.2rem;
-}
-
- ._m_2s {
-    margin: 0.3rem;
-}
-
- ._m_3s {
-    margin: 0.4rem;
-}
-
- ._m_4s {
-    margin: 0.5rem;
-}
-
- ._m_5s {
-    margin: 0.8rem;
-}
-
- ._mt_0 {
-    margin-top: 0rem;
-}
-
- ._mt_1 {
-    margin-top: 1rem;
-}
-
- ._mt_2 {
-    margin-top: 2rem;
-}
-
- ._mt_3 {
-    margin-top: 3rem;
-}
-
- ._mt_4 {
-    margin-top: 4rem;
-}
-
- ._mt_5 {
-    margin-top: 5rem;
-}
-
- ._mt_1s {
-    margin-top: 0.2rem;
-}
-
- ._mt_2s {
-    margin-top: 0.3rem;
-}
-
- ._mt_3s {
-    margin-top: 0.4rem;
-}
-
- ._mt_4s {
-    margin-top: 0.5rem;
-}
-
- ._mt_5s {
-    margin-top: 0.8rem;
-}
-
- ._mb_0 {
-    margin-bottom: 0rem;
-}
-
- ._mb_1 {
-    margin-bottom: 1rem;
-}
-
- ._mb_2 {
-    margin-bottom: 2rem;
-}
-
- ._mb_3 {
-    margin-bottom: 3rem;
-}
-
- ._mb_4 {
-    margin-bottom: 4rem;
-}
-
- ._mb_5 {
-    margin-bottom: 5rem;
-}
-
- ._mb_1s {
-    margin-bottom: 0.2rem;
-}
-
- ._mb_2s {
-    margin-bottom: 0.3rem;
-}
-
- ._mb_3s {
-    margin-bottom: 0.4rem;
-}
-
- ._mb_4s {
-    margin-bottom: 0.5rem;
-}
-
- ._mb_5s {
-    margin-bottom: 0.8rem;
-}
-
- ._ml_0 {
-    margin-left: 0rem;
-}
-
- ._ml_1 {
-    margin-left: 1rem;
-}
-
- ._ml_2 {
-    margin-left: 2rem;
-}
-
- ._ml_3 {
-    margin-left: 3rem;
-}
-
- ._ml_4 {
-    margin-left: 4rem;
-}
-
- ._ml_5 {
-    margin-left: 5rem;
-}
-
- ._ml_1s {
-    margin-left: 0.2rem;
-}
-
- ._ml_2s {
-    margin-left: 0.3rem;
-}
-
- ._ml_3s {
-    margin-left: 0.4rem;
-}
-
- ._ml_4s {
-    margin-left: 0.5rem;
-}
-
- ._ml_5s {
-    margin-left: 0.8rem;
-}
-
- ._mr_0 {
-    margin-right: 0rem;
-}
-
- ._mr_1 {
-    margin-right: 1rem;
-}
-
- ._mr_2 {
-    margin-right: 2rem;
-}
-
- ._mr_3 {
-    margin-right: 3rem;
-}
-
- ._mr_4 {
-    margin-right: 4rem;
-}
-
- ._mr_5 {
-    margin-right: 5rem;
-}
-
- ._mr_1s {
-    margin-right: 0.2rem;
-}
-
- ._mr_2s {
-    margin-right: 0.3rem;
-}
-
- ._mr_3s {
-    margin-right: 0.4rem;
-}
-
- ._mr_4s {
-    margin-right: 0.5rem;
-}
-
- ._mr_5s {
-    margin-right: 0.8rem;
-}
-
- ._my_0 {
-    margin-top: 0rem;
-margin-bottom: 0rem;
-}
-
- ._my_1 {
-    margin-top: 1rem;
-margin-bottom: 1rem;
-}
-
- ._my_2 {
-    margin-top: 2rem;
-margin-bottom: 2rem;
-}
-
- ._my_3 {
-    margin-top: 3rem;
-margin-bottom: 3rem;
-}
-
- ._my_4 {
-    margin-top: 4rem;
-margin-bottom: 4rem;
-}
-
- ._my_5 {
-    margin-top: 5rem;
-margin-bottom: 5rem;
-}
-
  ._mx_a {
     margin: 0 auto;
+}
+
+ ._m0 {
+    margin: var(--spacer_-0);
+}
+
+ ._m1 {
+    margin: var(--spacer_-1);
+}
+
+ ._m2 {
+    margin: var(--spacer_-2);
+}
+
+ ._m3 {
+    margin: var(--spacer_-3);
+}
+
+ ._m4 {
+    margin: var(--spacer_-4);
+}
+
+ ._m5 {
+    margin: var(--spacer_-5);
+}
+
+ ._m0s {
+    margin: var(--spacer-K-s_-0);
+}
+
+ ._m1s {
+    margin: var(--spacer-K-s_-1);
+}
+
+ ._m2s {
+    margin: var(--spacer-K-s_-2);
+}
+
+ ._m3s {
+    margin: var(--spacer-K-s_-3);
+}
+
+ ._m4s {
+    margin: var(--spacer-K-s_-4);
+}
+
+ ._m5s {
+    margin: var(--spacer-K-s_-5);
+}
+
+ ._mt0 {
+    margin-top: var(--spacer_-0);
+}
+
+ ._mt1 {
+    margin-top: var(--spacer_-1);
+}
+
+ ._mt2 {
+    margin-top: var(--spacer_-2);
+}
+
+ ._mt3 {
+    margin-top: var(--spacer_-3);
+}
+
+ ._mt4 {
+    margin-top: var(--spacer_-4);
+}
+
+ ._mt5 {
+    margin-top: var(--spacer_-5);
+}
+
+ ._mt0s {
+    margin-top: var(--spacer-K-s_-0);
+}
+
+ ._mt1s {
+    margin-top: var(--spacer-K-s_-1);
+}
+
+ ._mt2s {
+    margin-top: var(--spacer-K-s_-2);
+}
+
+ ._mt3s {
+    margin-top: var(--spacer-K-s_-3);
+}
+
+ ._mt4s {
+    margin-top: var(--spacer-K-s_-4);
+}
+
+ ._mt5s {
+    margin-top: var(--spacer-K-s_-5);
+}
+
+ ._mb0 {
+    margin-bottom: var(--spacer_-0);
+}
+
+ ._mb1 {
+    margin-bottom: var(--spacer_-1);
+}
+
+ ._mb2 {
+    margin-bottom: var(--spacer_-2);
+}
+
+ ._mb3 {
+    margin-bottom: var(--spacer_-3);
+}
+
+ ._mb4 {
+    margin-bottom: var(--spacer_-4);
+}
+
+ ._mb5 {
+    margin-bottom: var(--spacer_-5);
+}
+
+ ._mb0s {
+    margin-bottom: var(--spacer-K-s_-0);
+}
+
+ ._mb1s {
+    margin-bottom: var(--spacer-K-s_-1);
+}
+
+ ._mb2s {
+    margin-bottom: var(--spacer-K-s_-2);
+}
+
+ ._mb3s {
+    margin-bottom: var(--spacer-K-s_-3);
+}
+
+ ._mb4s {
+    margin-bottom: var(--spacer-K-s_-4);
+}
+
+ ._mb5s {
+    margin-bottom: var(--spacer-K-s_-5);
+}
+
+ ._ml0 {
+    margin-left: var(--spacer_-0);
+}
+
+ ._ml1 {
+    margin-left: var(--spacer_-1);
+}
+
+ ._ml2 {
+    margin-left: var(--spacer_-2);
+}
+
+ ._ml3 {
+    margin-left: var(--spacer_-3);
+}
+
+ ._ml4 {
+    margin-left: var(--spacer_-4);
+}
+
+ ._ml5 {
+    margin-left: var(--spacer_-5);
+}
+
+ ._ml0s {
+    margin-left: var(--spacer-K-s_-0);
+}
+
+ ._ml1s {
+    margin-left: var(--spacer-K-s_-1);
+}
+
+ ._ml2s {
+    margin-left: var(--spacer-K-s_-2);
+}
+
+ ._ml3s {
+    margin-left: var(--spacer-K-s_-3);
+}
+
+ ._ml4s {
+    margin-left: var(--spacer-K-s_-4);
+}
+
+ ._ml5s {
+    margin-left: var(--spacer-K-s_-5);
+}
+
+ ._mr0 {
+    margin-right: var(--spacer_-0);
+}
+
+ ._mr1 {
+    margin-right: var(--spacer_-1);
+}
+
+ ._mr2 {
+    margin-right: var(--spacer_-2);
+}
+
+ ._mr3 {
+    margin-right: var(--spacer_-3);
+}
+
+ ._mr4 {
+    margin-right: var(--spacer_-4);
+}
+
+ ._mr5 {
+    margin-right: var(--spacer_-5);
+}
+
+ ._mr0s {
+    margin-right: var(--spacer-K-s_-0);
+}
+
+ ._mr1s {
+    margin-right: var(--spacer-K-s_-1);
+}
+
+ ._mr2s {
+    margin-right: var(--spacer-K-s_-2);
+}
+
+ ._mr3s {
+    margin-right: var(--spacer-K-s_-3);
+}
+
+ ._mr4s {
+    margin-right: var(--spacer-K-s_-4);
+}
+
+ ._mr5s {
+    margin-right: var(--spacer-K-s_-5);
+}
+
+ ._my0 {
+    margin-bottom: var(--spacer_-0);
+margin-top: var(--spacer_-0);
+}
+
+ ._my1 {
+    margin-bottom: var(--spacer_-1);
+margin-top: var(--spacer_-1);
+}
+
+ ._my2 {
+    margin-bottom: var(--spacer_-2);
+margin-top: var(--spacer_-2);
+}
+
+ ._my3 {
+    margin-bottom: var(--spacer_-3);
+margin-top: var(--spacer_-3);
+}
+
+ ._my4 {
+    margin-bottom: var(--spacer_-4);
+margin-top: var(--spacer_-4);
+}
+
+ ._my5 {
+    margin-bottom: var(--spacer_-5);
+margin-top: var(--spacer_-5);
+}
+
+ ._my0s {
+    margin-bottom: var(--spacer-K-s_-0);
+margin-top: var(--spacer-K-s_-0);
+}
+
+ ._my1s {
+    margin-bottom: var(--spacer-K-s_-1);
+margin-top: var(--spacer-K-s_-1);
+}
+
+ ._my2s {
+    margin-bottom: var(--spacer-K-s_-2);
+margin-top: var(--spacer-K-s_-2);
+}
+
+ ._my3s {
+    margin-bottom: var(--spacer-K-s_-3);
+margin-top: var(--spacer-K-s_-3);
+}
+
+ ._my4s {
+    margin-bottom: var(--spacer-K-s_-4);
+margin-top: var(--spacer-K-s_-4);
+}
+
+ ._my5s {
+    margin-bottom: var(--spacer-K-s_-5);
+margin-top: var(--spacer-K-s_-5);
 }
 
  ._mx_1s {
@@ -1903,39 +1905,7 @@ transition: all 300ms linear;
 
 /* buttons */
 
-._btn_bg_-button-background-color0 {
-    background-color: var(--button-background-color_-0);
-}
-
- ._btn_bg_-button-background-color1 {
-    background-color: var(--button-background-color_-1);
-}
-
- ._btn_bg_-button-background-color2 {
-    background-color: var(--button-background-color_-2);
-}
-
- ._btn_bg_-button-background-color3 {
-    background-color: var(--button-background-color_-3);
-}
-
- ._btn_bg_-button-background-color4 {
-    background-color: var(--button-background-color_-4);
-}
-
- ._btn_bg_-button-background-color5 {
-    background-color: var(--button-background-color_-5);
-}
-
- ._btn_bgg_-button-background-gradient0 {
-    background: var(--button-background-gradient_-0);
-}
-
- ._btn_bgg_-button-background-gradient1 {
-    background: var(--button-background-gradient_-1);
-}
-
- ._btn_2 {
+._btn_2 {
     cursor: pointer;
 border: 0;
 border-radius: 12px;
